--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-reconciler": "^0.31.0",
+    "resend": "^6.0.3",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "tw-animate-css": "^1.3.8"
